# Photonee_Pro

./: LICENSE  README.md  README_CN.md  index.html  package.json  tailwind.config.cjs
.github/workflows/: dp.yml
src/: App.svelte  i18n.js  main.js  store.js  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/funcs/: biz.js  file.js  image.js
src/i18n/: en-US.json  zh-CN.json
src/lib/: Donate.svelte  EditBar.svelte  Infos.svelte  Modal.svelte  Thumbs.svelte  ToolBar.svelte  TopBar.svelte  btns.svelte  winBtns.svelte
src/lib/svgs/: Brand.svelte  SimpleBrand.svelte
src/pages/: Processor.svelte  Viewer.svelte
