[package]
name = "Image_Try"
version = "0.0.0"
description = "Viewer for images"
authors = ["patrick chen"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "app-show", "app-hide", "os-all", "macos-private-api", "window-unminimize", "window-unmaximize", "window-show", "window-minimize", "window-maximize", "window-hide", "window-close", "window-start-dragging", "protocol-asset", "dialog-all", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-cli = "1.4.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
